<resources>
    <string name="app_name">Gran CARS</string>
    <string name="home">Home</string>
    <string name="cars">Cars</string>
    <string name="reservations">Reservations</string>
    <string name="profile">Profile</string>
    <string name="title_activity_form_reservation_vehicle">FormReservationVehicleActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="password">Senha</string>
    <string name="email">Email</string>
    <string name="login_title">Login</string>
    <string name="login_in">Entrar</string>
    <string name="go_back_button_description">Go Back Resource</string>
    <string name="no_account">Não tem uma conta? Cadastre-se</string>
    <string name="register">Cadastro</string>
    <string name="have_account">Já tem uma conta? Faça login</string>
    <string name="register_button">Cadastrar</string>
    <string name="title_activity_admin_home">AdminHomeActivity</string>
    <string name="car_name">%1$s %2$s</string>
    <string name="car_price">%1$s %2$s</string>
</resources>