<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.projectmobile.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_cars"
        android:name="com.example.projectmobile.ui.cars.CarsFragment"
        android:label="@string/cars"
        tools:layout="@layout/fragment_cars" />

    <fragment
        android:id="@+id/navigation_reservations"
        android:name="com.example.projectmobile.ui.reservations.ReservationsFragment"
        android:label="@string/reservations"
        tools:layout="@layout/fragment_reservations" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.projectmobile.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_reservations" />
</navigation>