<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="32dp">

    <ImageButton
        android:id="@+id/returnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/go_back_button_description"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="?attr/homeAsUpIndicator"
        app:tint="@color/blue_primary" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/register"
        android:textColor="@color/blue_primary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleTextView"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:autofillHints="name"
        android:background="@drawable/edittext_drawable"
        android:hint="Nome"
        android:inputType="text"
        android:maxWidth="488dp"
        android:minHeight="48dp"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp"
        android:textColor="@color/blue_primary"
        android:textColorHint="@color/black_overlay" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editName"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edittext_drawable"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxWidth="488dp"
        android:minHeight="48dp"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp"
        android:textColor="@color/blue_primary"
        android:textColorHint="@color/black_overlay" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editEmail"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:autofillHints="password"
        android:background="@drawable/edittext_drawable"
        android:hint="Senha"
        android:inputType="textPassword"
        android:maxWidth="488dp"
        android:minHeight="48dp"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp"
        android:textColor="@color/blue_primary"
        android:textColorHint="@color/black_overlay" />

    <EditText
        android:id="@+id/editCPF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editPassword"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:autofillHints="cpf"
        android:background="@drawable/edittext_drawable"
        android:hint="CPF"
        android:inputType="number"
        android:maxWidth="488dp"
        android:maxLength="11"
        android:minHeight="48dp"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp"
        android:textColor="@color/blue_primary"
        android:textColorHint="@color/black_overlay" />

    <Button
        android:id="@+id/editBirthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editCPF"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:hint="Data de Nascimento"
        android:inputType="date"
        android:maxWidth="488dp"
        android:minHeight="48dp"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp"
        android:textColor="@color/blue_primary"
        android:textColorHint="@color/black_overlay" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editBirthday"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/yellow_primary"
        android:maxWidth="488dp"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp"
        android:text="Cadastrar" />

    <Button
        android:id="@+id/have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/transparent"
        android:outlineAmbientShadowColor="@android:color/transparent"
        android:outlineSpotShadowColor="@android:color/transparent"
        android:shadowColor="@android:color/transparent"
        android:text="@string/have_account"
        android:textColor="@color/blue_primary"
        android:textSize="12sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/have_account"
        android:visibility="gone" />

</RelativeLayout>
